# windnf

./: .gitignore  AI.md  CLI.md  MANIFEST.in  README.md  TODO.md  pyproject.toml
schemas/: filelists.sqlite.txt  other.sqlite.txt  primary.sqlite.txt
scripts/: test.sh
src/windnf/: __init__.py  _version.py  cli.py  config.py  db_manager.py  downloader.py  logger.py  metadata_manager.py  nevra.py  operations.py  schema.sql  utils.py
src/winrpmdepscalc/: __init__.py  cli.py  config.py  db_manager.py  downloader.py  metadata_manager.py  operations.py
tests/: run.py  run.sh  test_cli.py
