[build-system]
requires = ["setuptools>=80", "wheel", "setuptools_scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "windnf"
description = "Windows RPM Package Metadata Calculator Tool"
authors = [{ name = "Maulusck✖Perplexity", email = "maulusck@pm.me" }]
license = { text = "WTFPL" }
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Topic :: System :: Software Distribution",
    "Development Status :: 4 - Beta"
]
dependencies = [
    "requests",
    "requests-negotiate-sspi; sys_platform == 'win32'", 
    "pip-system-certs; sys_platform == 'win32'",
    "PyYAML", 
    "tqdm", 
    "urllib3"
]
dynamic = ["version"]

[project.urls]
Home-page = "https://github.com/maulusck/windnf"

[project.scripts]
windnf = "windnf.cli:main"

[tool.setuptools_scm]
write_to = "src/windnf/_version.py"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120