[build-system]
requires = ["setuptools>=80", "wheel", "setuptools_scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "windnf"
description = "Windows RPM Package Metadata Calculator Tool"
authors = [{ name = "Maulusck✖Perplexity", email = "maulusck@pm.me" }]
license = "WTFPL"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
]
dependencies = ["requests", "tqdm", "urllib3"]
dynamic = ["version"]

[project.urls]
Home-page = "https://github.com/maulusck/windnf"

[project.scripts]
windnf = "windnf.cli:main"

[tool.setuptools_scm]
# optionally configure setuptools_scm here

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120
